--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ book/
 # rust
 /target/
 /synapse/*.so
+!/synapse/synapse_rust.abi3.so
 
 # Poetry will create a setup.py, which we don't want to include.
 /setup.py
